// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MovieShowPage should match snapshot when user is logged in and rating is 10 1`] = `
<div
  className="movie-page"
>
  <img
    alt="Ad Astra"
    className="backdrop"
    src="https://image.tmdb.org/t/p/original//5BwqwxMEjeFtdknRV792Svo0K1v.jpg"
  />
  <h1
    className="movie__title--two"
  >
    Ad Astra
  </h1>
  <p
    className="in-theaters"
  >
    In Theaters: 
    2019-09-17
  </p>
  <p
    className="overview"
  >
    The near future, humanity to look to the stars an.....
  </p>
  <p
    className="average__rating--two"
  >
    Average Rating: 
    5.1
  </p>
  <div
    className="already-rated"
  >
    <p
      className="top-marks"
    >
      My Rating: 
      10
    </p>
    <button
      className="reset-rating"
      onClick={[Function]}
    >
      Reset Rating
    </button>
  </div>
</div>
`;

exports[`MovieShowPage should match snapshot when user is logged in and rating is less than 10 1`] = `
<div
  className="movie-page"
>
  <img
    alt="Ad Astra"
    className="backdrop"
    src="https://image.tmdb.org/t/p/original//5BwqwxMEjeFtdknRV792Svo0K1v.jpg"
  />
  <h1
    className="movie__title--two"
  >
    Ad Astra
  </h1>
  <p
    className="in-theaters"
  >
    In Theaters: 
    2019-09-17
  </p>
  <p
    className="overview"
  >
    The near future, humanity to look to the stars an.....
  </p>
  <p
    className="average__rating--two"
  >
    Average Rating: 
    5.1
  </p>
  <div
    className="already-rated"
  >
    <p
      className="my-rating"
    >
      My Rating: 
      8
    </p>
    <button
      className="reset-rating"
      onClick={[Function]}
    >
      Reset Rating
    </button>
  </div>
</div>
`;

exports[`MovieShowPage should match the MovieShowPage Snapshot with no logged in user 1`] = `
<div
  className="movie-page"
>
  <img
    alt="Ad Astra"
    className="backdrop"
    src="https://image.tmdb.org/t/p/original//5BwqwxMEjeFtdknRV792Svo0K1v.jpg"
  />
  <h1
    className="movie__title--two"
  >
    Ad Astra
  </h1>
  <p
    className="in-theaters"
  >
    In Theaters: 
    2019-09-17
  </p>
  <p
    className="overview"
  >
    The near future, humanity to look to the stars an.....
  </p>
  <p
    className="average__rating--two"
  >
    Average Rating: 
    5.1
  </p>
</div>
`;
